<resources>
    <string name="app_name">Drone Project</string>
    <string name="title_activity_test_drawer">TestDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="logo_content">Logo EPFL</string>

    <string name="connection">Connection ...</string>
    <string name="disconnection">Disconnection ...</string>
    <string name="fetch">Fetching medias</string>
    <string name="emergency">Emergency</string>
    <string name="ap">AP</string>
    <string name="engageap">Engage AP</string>
    <string name="disengageap">Disengage AP</string>
    <string name="open">Open</string>
    <string name="clean">Clean</string>
    <string name="download">Download</string>
    <string name="downloadMedia">Downloading medias</string>
    <string name="defaultBtn">Button</string>
    <string name="droneBattery">Drone Battery: </string>
    <string name="controllerBattery">Skycontroller Battery: </string>
    <string name="defaultBattery">XXX%</string>
    <string name="waiting">Waiting for a Drone</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="alt">Altitude [m]</string>
    <string name="yaw">Yaw [degree]</string>
    <string name="title">Title</string>
    <string name="close">Close</string>
    <string name="errorSaving">Error while saving</string>
    <string name="confirmSaving">Flightplan saved as: </string>
    <string name="leftFlip">LeftFlip</string>
    <string name="moveF">Move1F</string>
    <string name="moveB">Move1B</string>
    <string name="startFLP">StartFLP</string>
    <string name="pauseFLP">PauseFLP</string>
    <string name="stopFLP">StopFLP</string>
    <string name="flatTrim">FlatTrimConfig</string>
    <string name="startMis">StartMis</string>
    <string name="closer">Closer</string>

</resources>
