<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SkyControllerActivity"
    android:id="@+id/piloting_view">

    <ch.epfl.droneproject.view.BebopVideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <ch.epfl.droneproject.view.OpenCVView
        android:id="@+id/cvcView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:visibility="visible" />

    <TextView
        android:id="@+id/skyBatteryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_marginBottom="56dp"
        android:text="@string/controllerBattery"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff0000"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/skyBatteryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:layout_marginBottom="56dp"
        android:layout_toEndOf="@id/skyBatteryText"
        android:layout_toRightOf="@id/skyBatteryText"
        android:text="@string/defaultBattery"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff0000"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/droneBatteryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/skyBatteryText"
        android:text="@string/droneBattery"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff0000"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/droneBatteryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/skyBatteryLabel"
        android:layout_toEndOf="@+id/droneBatteryText"
        android:layout_toRightOf="@+id/droneBatteryText"
        android:text="@string/defaultBattery"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff0000"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/droneConnectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/waiting"
        android:textColor="@color/secondary_text"
        android:textSize="25sp"
        android:visibility="gone" />

    <ch.epfl.droneproject.view.ConsoleView
        android:id="@+id/console"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:focusable="false"
        android:inputType="none"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="vertical"
        android:textColor="@android:color/white" />
</RelativeLayout>




