<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="ch.epfl.droneproject.activity.MapsFragment" >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="#80000000"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/open_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/open" />

        <View
            android:id="@+id/VerticalLine1"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <Button
            android:id="@+id/B"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title_activity_maps" />

        <View
            android:id="@+id/VerticalLine2"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <Button
            android:id="@+id/C"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title_activity_maps" />

        <View
            android:id="@+id/VerticalLine3"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />


        <Button
            android:id="@+id/clean_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/clean" />

    </LinearLayout>

</FrameLayout>